fix z-index

--- a/projects/card/styles/card/card.scss
+++ b/projects/card/styles/card/card.scss
@@ -21,8 +21,6 @@
 
   box-sizing: border-box;
 
-  z-index: 10;
-
   overflow: hidden;
   width: 100%;
   padding: 15px 0;
